--- a/Budfirmex/src/app/buildings/modals/engineer/engineer-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/engineer/engineer-modal.component.html
@@ -15,5 +15,5 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Save click')">Zapisz</button>
+  <button type="submit" class="btn btn-outline-dark" (click)="activeModal.close('Save click')">Zapisz</button>
 </div>
