--- a/Budfirmex/src/app/buildings/modals/operator/operator-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/operator/operator-modal.component.html
@@ -9,38 +9,38 @@
     </button>
   </div>
   <div class="modal-body">
-    <form>
+    <form #form="ngForm">
       <div class="form-group">
         <label for="name_sur">Imię i nazwisko</label>
-        <select id="name_sur" class="form-control">
+        <select id="name_sur" name="name_sur" class="form-control">
           <option></option>
         </select>
       </div>
       <div class="form-group">
         <label for="work_start">Rozpoczęcie pracy</label>
-        <select id="work_start" class="form-control">
+        <select id="work_start" name="work_start" class="form-control">
           <option></option>
         </select>
       </div>
       <div class="form-group">
         <label for="end_date">Zakończenie pracy</label>
-        <select id="end_date" class="form-control">
+        <select id="end_date" name="end_date" class="form-control">
           <option></option>
         </select>
       </div>
       <div class="form-group form-check">
         <label for="harmful_cond">Warunki szkodliwe</label>
-        <input type="checkbox" id="harmful_cond" class="form-check-input">
+        <input type="checkbox" id="harmful_cond" name="harmful_cond" class="form-check-input">
 
       </div>
       <div class="form-group">
         <label for="harmful_hours">Liczba godzin w warunkach szkodliwych</label>
-        <input type="text" id="harmful_hours" class="form-control">
+        <input type="text" id="harmful_hours" name="harmful_hours" class="form-control" required [(ngModel)]="model.harmful_hours" #harmful_hours="ngModel">
       </div>
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Zapisz</button>
+    <button type="submit" class="btn btn-outline-dark" [disabled]="form.invalid" (click)="modal.close('Save click')">Zapisz</button>
   </div>
 </ng-template>
 
