final part of repositories - only GET actions

--- a/Budfirmex/src/app/buildings/components/operators-work-cards/operators-work-cards.component.html
+++ b/Budfirmex/src/app/buildings/components/operators-work-cards/operators-work-cards.component.html
@@ -1,21 +1,16 @@
 <div class="container-fluid">
-<app-machine-modal></app-machine-modal>
-<p class="machines-title my-3">Maszyny</p>
+<p class="operators-title my-3">Operatorzy</p>
 <div class="white-background table-margin">
     <table>
         <thead>
             <tr>
                 <th>Lp.</th>
-                <th>Numer maszyny</th>
-                <th>Typ</th>
-                <th>Operator</th>
+                <th>Imię i nazwisko</th>
                 <th>Akcja</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td></td>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
