--- a/Budfirmex/src/app/buildings/components/used-equipments/used-equipments.component.html
+++ b/Budfirmex/src/app/buildings/components/used-equipments/used-equipments.component.html
@@ -1,17 +1,20 @@
 <div class="container-fluid">
-<app-operator-modal></app-operator-modal>
-<p class="operators-title my-3">Operatorzy</p>
+<p class="machines-title my-3">Maszyny</p>
 <div class="white-background table-margin">
     <table>
         <thead>
             <tr>
                 <th>Lp.</th>
-                <th>Imię i nazwisko</th>
+                <th>Numer maszyny</th>
+                <th>Typ</th>
+                <th>Operator</th>
                 <th>Akcja</th>
             </tr>
         </thead>
         <tbody>
             <tr>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
