--- a/Budfirmex/src/app/buildings/modals/worker/worker-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/worker/worker-modal.component.html
@@ -13,7 +13,7 @@
       <div class="form-group">
         <label for="name_sur">Imię i nazwisko</label>
         <select id="name_sur" class="form-control">
-          <option></option>
+          <option *ngFor="let workerObject of workers" [value]="workerObject.id">{{ workerObject.firstName + ' ' + workerObject.lastName}}</option>
         </select>
       </div>
       <div class="form-group">
