--- a/Budfirmex/src/app/buildings/pages/building/building.component.html
+++ b/Budfirmex/src/app/buildings/pages/building/building.component.html
@@ -19,7 +19,7 @@
   </div>
   <div class="row">
     <div class="col-4 pt-4 pb-4">
-      <app-building-personnel [engineers]="building.engineers" [supervisor]="building.supervisor"></app-building-personnel>
+      <app-building-personnel [engineers]="building?.engineers" [supervisor]="building?.supervisor"></app-building-personnel>
     </div>
     <div class="col-8 pt-4 pb-4">
       <app-daily-reports [reports]="dailyReports"></app-daily-reports>
