--- a/Budfirmex/src/app/buildings/pages/equipment-daily-report/equipment-daily-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/equipment-daily-report/equipment-daily-report.component.html
@@ -1,20 +1,21 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-<!--          <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>-->
+          <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
         </div>
       </div>
         <div class="row">
             <div class="col-12">
-                <app-report-details></app-report-details>
+                <app-report-details
+                  [buildingNumber]=""></app-report-details>
             </div>
         </div>
         <div class="row my-3">
             <div class="col-4">
-                <app-operators></app-operators>
+                <app-operators [operatorsWorkCards]="operatorsWorkCards"></app-operators>
             </div>
             <div class="col-8">
-                <app-machines></app-machines>
+                <app-used-equipments [usedEquipments]="usedEquipments"></app-used-equipments>
             </div>
         </div>
     </div>
