--- a/Budfirmex/src/app/dashboard/modals/new-building/new-building-modal.component.html
+++ b/Budfirmex/src/app/dashboard/modals/new-building/new-building-modal.component.html
@@ -3,7 +3,7 @@
     <h4>Dodaj nową budowę</h4>
     <h5>Uzupenij zestaw danych po czym przejdź do karty budowy.</h5>
   </div>
-  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss()">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
@@ -23,16 +23,16 @@
     </div>
     <div class="form-group">
       <label for="end_date">Planowany termin zakończenia</label>
-      <input type="text" id="end_date" class="form-control">
+      <input type="date" id="end_date" class="form-control">
     </div>
     <div class="form-group">
       <label for="engineers">Inżynierowie budowy</label>
       <select id="engineers" class="form-control">
-        <option></option>
+        <option *ngFor="let engineer of engineers" [value]="engineer.id">{{ engineer.lastName + ' ' + engineer.lastName}}</option>
       </select>
     </div>
   </form>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Save click')">Zapisz</button>
+  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close()">Zapisz</button>
 </div>
