--- a/Budfirmex/src/app/dashboard/modals/new-building/new-building-modal.component.html
+++ b/Budfirmex/src/app/dashboard/modals/new-building/new-building-modal.component.html
@@ -34,5 +34,5 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close()">Zapisz</button>
+  <button type="button" class="btn btn-outline-dark" (click)="createBuilding()">Zapisz</button>
 </div>
