--- a/Budfirmex/src/app/buildings/modals/worker/worker-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/worker/worker-modal.component.html
@@ -35,6 +35,11 @@
       <div class="form-group">
         <label for="harmful_hours">Liczba godzin w warunkach szkodliwych</label>
         <input type="text" id="harmful_hours" name="harmful_hours" class="form-control" required [(ngModel)]="model.harmful_hours" #harmful_hours="ngModel">
+        <ng-container *ngIf="harmful_hours.invalid && harmful_hours.touched">
+          <div class="alert alert-danger" role="alert" *ngIf="harmful_hours.errors.required">
+            Pole jest wymagane
+          </div>
+        </ng-container>
       </div>
       <div class="form-group form-check">
         <label for="foreman">Brygadzista</label>
